fix: body overflow and animation timeline

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -59,6 +59,10 @@ body {
   }
 }
 
+.overflow--hidden {
+  overflow: hidden;
+}
+
 ::selection {
   background: var(--color-primary);
   color: var(--text-color-default);
